--- a/desafios/dx010/android.html
+++ b/desafios/dx010/android.html
@@ -28,7 +28,10 @@
 
             <p>A primeira tentativa de criar um mascote surgiu em 2007 e veio de um desenvolvedor chamado <a href="https://androidcommunity.com/dan-morrill-shows-us-the-android-mascot-that-almost-was-20130103/" target="_blank">Dan Morrill</a>. Ele conta que abriu o <a href="https://inkscape.org" target="_blank">Inkscape</a> (software livre para vetorização de imagens) e criou sua própria versão de robô. O objetivo era apenas personificar o sistema apenas para a a sua equipe, não existia nenhuma solicitação da empresa para a criação de um mascote.</p>
 
-            <img src="pacote-projeto-d010/imagens/dan-droids.png" alt="imagem dos dandroids">
+            <picture>
+                <source media="(max-width: 670px)" srcset="pacote-projeto-d010/imagens/dan-droids-pq.png">
+                <img src="pacote-projeto-d010/imagens/dan-droids.png" alt="imagem dos dandroids">
+            <picture>
 
             <p>Essa primeira versão bizarra até foi batizada em homenagem ao seu criador: seriam os <strong>Dandroids</strong>.</p>
 
@@ -36,15 +39,18 @@
 
             <p>A ideia de ter um mascote foi amadurecendo e a missão foi passada para uma profissional da área. A ilustradora Russa <a href="https://www.irinablok.com/android" target="_blank">Irina Blok</a>, também funcionária do Google, ficou com a missão de representar o pequeno robô de uma maneira mais agradável.</p>
 
-            <img src="pacote-projeto-d010/imagens/irina-blok.jpg" alt="irina-blok criadora do bugdroid">
+            <picture>
+                <source media="(max-width: 670px)" srcset="pacote-projeto-d010/imagens/irina-blok-pq.jpg">
+                <img src="pacote-projeto-d010/imagens/irina-blok.jpg" alt="irina-blok criadora do bugdroid">
+            </picture>
 
             <p>A ideia principal da Irina era representar tudo graficamente com poucos traços e de forma mais chapada. O desenho também deveria gerar identificação rápida com quem o olha. Surgiu então o <strong>Bugdroid</strong>, o novo mascote do Android.</p>
 
-            <img src="pacote-projeto-d010/imagens/bugdroid.png" alt="bugdroid mascote do android">
+            <img class="pequena" src="pacote-projeto-d010/imagens/bugdroid.png" alt="bugdroid mascote do android">
 
             <p>A principal inspiração para os traços do novo <strong>Bugdroid</strong> veio daqueles bonequinhos que ilustram portas de banheiro para indicar o gênero de cada porta. Conta a lenda que a artista estava criando em sua mesa no escritório do <strong>Google</strong> e olhou para o lado dos banheiros e a identificação foi imediata: simples, limpo, objetivo.</p>
 
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/l2UDgpLz20M?si=yb1F7Cb8qxSGLR7Z" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/l2UDgpLz20M?si=tit-it2KK6YlJ2QM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             
             <aside>
                 <h3>Quer aprender mais?</h3>
@@ -93,16 +99,18 @@
                         9.0 - <abbr title="">Pie</abbr>
                     </li>
                 </ul>
-                Infelizmente, o <strong>Android Q</strong> não existiu, pois o Google resolveu pôr fim a essa divertida prática e começou a usar numerações, o que deu origem ao Android 10.
-                Acesse aqui o site <a href="https://www.android.com/intl/en_uk/history/#/donut" target="_blank">Android History</a> para conhecer a sequência das versões "adocicadas" e o que cada uma trouxe para o sistema Android.
+                <p>
+                    Infelizmente, o <strong>Android Q</strong> não existiu, pois o Google resolveu pôr fim a essa divertida prática e começou a usar numerações, o que deu origem ao Android 10.
+                    Acesse aqui o site <a href="https://www.android.com/intl/en_uk/history/#/donut" target="_blank">Android History</a> para conhecer a sequência das versões "adocicadas" e o que cada uma trouxe para o sistema Android.
+                </p>
             </aside>
             
-            Então é isso! Espero que você tenha gostado do nosso artigo com essa curiosidade sobre o sistema Android e seu simpático mascote.
+            <p>Então é isso! Espero que você tenha gostado do nosso artigo com essa curiosidade sobre o sistema Android e seu simpático mascote.</p>
 
         </article>
     </main>
     <footer>
-        <p>Site criado por <a href="https://github.com/Joaoauguto6/" target="_blank">João Augusto</a> para o Curso em Vídeo</p>
+        <p>Site criado por <a href="https://github.com/Joaoauguto6/" target="_blank">João Augusto</a> para o <a href="youtube.com/cursoemvideo">Curso em Vídeo</a></p>
     </footer>
 </body>
 </html>
