--- a/exercicios/ex024/iframe003.html
+++ b/exercicios/ex024/iframe003.html
@@ -28,7 +28,7 @@
 
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus consequatur ea architecto doloremque accusantium quod in odio corporis pariatur, blanditiis voluptatum. Exercitationem sint commodi quidem sed minus est placeat beatae! Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque autem adipisci perferendis optio blanditiis aliquid voluptatem illo facere laboriosam consequuntur earum officia sapiente itaque inventore, alias voluptatum quia molestias ducimus!</p>
 
-    <iframe id="tela" name="frame" src=""<h1>Escolha uma das opções acima</h1><p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officiis eaque soluta numquam, veniam iure voluptas quam sunt laborum, fuga, cupiditate dolorem vel voluptatem minima quia dignissimos. Vitae placeat suscipit in.</p><img src='imagens/cursoemvideo.png'>">
+    <iframe id="tela" name="frame" srcdoc="<h1>Escolha uma das opções acima</h1><p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officiis eaque soluta numquam, veniam iure voluptas quam sunt laborum, fuga, cupiditate dolorem vel voluptatem minima quia dignissimos. Vitae placeat suscipit in.</p><img src='imagens/cursoemvideo.png'>">
         <p>Infelizmente seu navegador não é compatível com isso.</p>
     </iframe>
 
