--- a/desafios/dx012/index.html
+++ b/desafios/dx012/index.html
@@ -97,7 +97,7 @@
     </section>
 
     <footer>
-        <p>Site criado por <a href="https://joaoaugusto6.github.io" target="_blank">João Augusto</a> para o <a href="https://www.cursoemvideo.com" target="_blank">CursoemVideo</a></p>
+        <p>Site criado por <a href="https://github.com/joaoaugusto6" target="_blank">João Augusto</a> para o <a href="https://www.cursoemvideo.com" target="_blank">CursoemVideo</a></p>
     </footer>
 </body>
 </html>
