--- a/exercicios/ex028/grid001/index.html
+++ b/exercicios/ex028/grid001/index.html
@@ -5,7 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grid Layout na prática</title>
     <style>
-        
+        div.container {
+            border: 3px solid blue;
+            height: 250px;
+            display: grid;
+            grid-template-columns: auto auto auto;
+            grid-template-rows: auto auto auto;
+            gap: 10px;
+            align-items: normal;
+            justify-items: normal;
+            align-content: normal;
+            justify-content: normal;
+        }
+
+        div.item {
+            border: 3px solid #00b7ff;
+            padding: 5px;
+        }
     </style>
 </head>
 <body>
