correção do exercicio grid02

--- a/exercicios/ex028/grid002/index.html
+++ b/exercicios/ex028/grid002/index.html
@@ -16,7 +16,7 @@
         }
 
         div.item {
-            border: 3px solid red;
+            border: 3px solid #00c3ff;
             padding: 5px;
         }
     </style>
